# voxeet-sdk-android-audio

./: .gitignore  README.md  audio.gradle  build.gradle  gradle.properties  install.sh  jacoco.gradle  publishing.gradle  settings.gradle  tasks.gradle  upload.sh
.github/actions/version/: action.yml
.github/workflows/: build.yml  codeql-analysis.yml
audio/: build.gradle
audio/src/androidTest/: AndroidManifest.xml
audio/src/androidTest/java/com/voxeet/audio/: InstrumentedTestClass.java  VoxeetRunner.java
audio/src/androidTest/java/com/voxeet/audio/audio_stack/: TestRoutes.java
audio/src/androidTest/java/com/voxeet/audio/mode/: SpeakerModeTest.java  SpeakerSamsungMode.java  TestModes.java
audio/src/androidTest/java/com/voxeet/audio/utils/: AudioDeviceManagerUtils.java  AudioStackManagerUtils.java  CheckFields.java  Fields.java  TestWithAsyncRun.java  ThreadUtils.java
audio/src/androidTest/java/com/voxeet/tests/: InstrumentedTestClass.java  Test.java  VoxeetRunner.java
audio/src/androidTest/java/com/voxeet/tests/enums/: SpecAudioRoute.java
audio/src/androidTest/java/com/voxeet/tests/modes/: TestModes.java
audio/src/androidTest/java/com/voxeet/tests/utils/: AudioStackManagerUtils.java  (+1 more)
audio/src/main/: AndroidManifest.xml
audio/src/main/java/com/voxeet/audio/: AudioManager.java  AudioRoute.java  AudioStackManager.java  MediaDevice.java
audio/src/main/java/com/voxeet/audio2/: AudioDeviceManager.java
audiosample/: build.gradle
audiosample/src/androidTest/java/com/voxeet/audio/: ExampleInstrumentedTest.java
audiosample/src/main/: AndroidManifest.xml
audiosample/src/main/java/com/voxeet/audiosample/: MainActivity.java  MainActivityMicrophone.java
audiosample/src/main/res/layout/: activity_main.xml  activity_main_microphone.xml  devices_list_device.xml
audiosample/src/main/res/values/: strings.xml
audiosample/src/test/java/com/voxeet/audio/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
hello-oboe/: CMakeLists.txt  build.gradle
hello-oboe-audio-device/: build.gradle
hello-oboe/src/main/: AndroidManifest.xml
hello-oboe/src/main/cpp/: PlayAudioEngine.cpp  PlayAudioEngine.h  jni_bridge.cpp
hello-oboe/src/main/java/com/google/sample/oboe/hellooboe/: PlaybackEngine.java
(+80 files in other folders)
